--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,8 +26,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
+      - name: Build App
         run: npm run build
+
+      - name: Build Docs
+        run: npm run docs:build
+
+      - name: Merge Docs into Dist
+        run: |
+          mkdir -p dist/docs
+          cp -r docs/.vitepress/dist/* dist/docs/
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
