--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "docs:preview": "vitepress preview docs"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
+    "papaparse": "^5.5.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
